--- a/Cursos/HTML/produtos/produtos.html
+++ b/Cursos/HTML/produtos/produtos.html
@@ -29,7 +29,7 @@
                 <li>
                     <h2>Cabelo</h2>
                     <img src="img/cabelo.jpg">
-                    <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p class="produto-descricao">
+                    <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
                     <p class="produto-preco">R$ 25,00</p>
                 </li>
                 <li>
@@ -46,6 +46,11 @@
                 </li>
             </ul>
         </main>
+
+        <footer>
+            <img src="img/logo-branco.png">
+            <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+        </footer>
     </body>
     
 </html>
