--- a/Cursos/HTML/contato/contato.html
+++ b/Cursos/HTML/contato/contato.html
@@ -27,13 +27,43 @@
         <main>
            <form>
                <label for="nomesobrenome">Nome e Sobrenome:</label>
-               <input type="text" id="nomesobrenome">
+               <input type="text" id="nomesobrenome" class="input-padrao">
 
                <label for="email">Email:</label>
-               <input type="text" id="email">
+               <input type="text" id="email" class="input-padrao">
 
                <label for="telefone">Telefone:</label>
-               <input type="text" id="telefone">
+               <input type="text" id="telefone" class="input-padrao">
+
+               <label for="mensagem">Mensagem</label>
+               <textarea id="mensagem" cols="65" rows="10" class="input-padrao"></textarea>
+
+               <div>
+                    <p>Como prefere nosso contato?</p>
+                    <label for="contato-email">
+                        <input type="radio" name="contato" value="email" id="contato-email"> Email
+                    </label>
+                    
+
+                    <label for="contato-telefone">
+                        <input type="radio" name="contato" value="telefone" id="contato-telefone"> Telefone
+                    </label>
+                    
+                    <label for="contato-whatsapp">
+                        <input type="radio" name="contato" value="whatsapp" id="contato-whatsapp"> WhatsApp
+                    </label>
+                </div>
+
+                <div>
+                    <p>Qual horário prefere ser atendido?</p>
+                    <select>
+                        <option value="manha">Manhã</option>
+                        <option value="tarde">Tarde</option>
+                        <option value="noite">Noite</option>
+                    </select>
+                </div>
+
+                <label><input type="checkbox" class="checkbox">Gostaria de receber nossas novidades por email?</label>
 
                <input type="submit" value="Enviar formulário">
            </form>
