--- a/Cursos/HTML/index.html
+++ b/Cursos/HTML/index.html
@@ -7,25 +7,27 @@
     <title>Barbearia Alura</title>
 
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style-home.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1 class="titulo-principal">Barbearia Alura</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="produtos/produtos.html">Produtos</a></li>
-                <li><a href="contato/contato.html">Contato</a></li>
-            </ul>
-        </nav>
+        <div class="caixa">
+            <h1><img src="produtos/img/logo.png"></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos/produtos.html">Produtos</a></li>
+                    <li><a href="contato/contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
         <img id="banner" src="img/banner.jpg">
 
-        <div class="principal">
+        <section class="principal">
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
@@ -40,9 +42,9 @@
             <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui
                 padrão de
                 excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-        </div>
+        </section>
 
-        <div class="beneficios">
+        <section class="beneficios">
             <h3 class="titulo-centralizado">Benefícios</h3>
             <ul class="lista-beneficios">
                 <li class="itens">Atendimento ao cliente</li>
@@ -51,11 +53,12 @@
                 <li class="itens">Profissionais Qualificados</li>
             </ul>
             <img src="img/beneficios.jpg" class="imgbeneficios">
-        </div>
+        </section>
     </main>
 
     <footer>
-
+        <img src="produtos/img/logo-branco.png">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
     </footer>
 </body>
 
